openshift-deployment-generator-ms/src/main/resources/template/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${appName}-dev
spec:
  finalizers:
  - kubernetes
