openshift-deployment-generator-ms/src/main/resources/template/namespace-int.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${appName}-int
spec:
  finalizers:
  - kubernetes
