openshift-deployment-generator-ms/src/main/resources/template/namespace-tst.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${appName}-tst
spec:
  finalizers:
  - kubernetes
