openshift-deployment-generator-ms/src/main/resources/template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${ocpNamespace}
  annotations:
      openshift.io/requester: OCP BootStrapper
spec:
  finalizers:
  - kubernetes
