openshift-deployment-generator-ms/src/main/resources/template/deployment-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ${appName}-service
  labels:
    app: ${appName}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: ${appName}
