openshift-deployment-generator-ms/src/main/resources/template/deployment-route.yaml
<#list routes as route>
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ${appName}-route
  labels:
    app: ${appName}
spec:
  to:
    kind: Service
    name: ${appName}-service
    weight: 256
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
---
</#list>
